--- a/site/website/public/css/style.css
+++ b/site/website/public/css/style.css
@@ -8537,3 +8537,36 @@ button.disabled:hover, a.btn_full.disabled:hover{
 .btn_color{
     background: #e04f67 !important;
 }
+
+.remove_image{
+    position: absolute !important;
+    top: 10px;
+    right: 10px;
+    box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.41);
+}
+
+.remove_image:hover {
+    cursor: pointer;
+    color: #e14d67 !important;
+    
+}
+
+.img_upload_card:hover{
+    cursor: pointer;
+}
+
+#image_input{
+    visibility: hidden;
+}
+
+.img_uploded{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.ad_image{
+    width: 80px;
+    height: 80px;
+    object-fit: cover;
+}
