--- a/site/website/public/css/style.css
+++ b/site/website/public/css/style.css
@@ -8575,3 +8575,65 @@ button.disabled:hover, a.btn_full.disabled:hover{
 .add_image_text{
     color: #999
 }
+
+.rs-dropdown-menu::before{
+    bottom: 100%;
+    left: 10%;
+    border: solid transparent;
+    content: " ";
+    height: 0;
+    width: 0;
+    position: absolute;
+    pointer-events: none;
+    border-bottom-color: #e04f67;
+    border-width: 7px;
+    margin-left: -7px;
+}
+.rs-dropdown-menu{
+    margin-top: 12px !important;
+    width: 260px;
+    top: 100%;
+    margin-left: -217px;
+    font-size: 12px;
+    font-weight: 400;
+    text-shadow: none;
+    text-transform: none !important;
+    border-top: 2px solid #e04f67;
+}
+
+ul#top_tools li{
+    border-bottom: 1px solid #ededed;
+    position: relative;
+    margin: 0;
+    padding: 5px 10px;
+    padding-bottom: 10px;
+    width: 100%;
+    font-size: 14px;
+}
+
+.rs-dropdown-item-content{
+    margin-left: 10px !important;
+}
+
+.userLogedInButton .rs-btn, .userLogedInButton .rs-btn:hover, .userLogedInButton .rs-btn:focus{
+    background: #e04f67cc;
+    color: #fff;
+}
+
+.rs-dropdown-item.rs-dropdown-item-focus, .rs-dropdown-item:focus-visible{
+    background-color: #e04f6738 !important;
+    color: #e04f67cc !important
+}
+
+.login-link{
+    background : #e04f67;
+    padding : 3px 20px !important;
+    color: #fff
+}
+
+.card-hours{
+    background: #fff8f2;
+    padding: 20px 10px;
+    border-radius: 10px;
+    margin: 20px 0 30px 0
+}
