--- a/site/website/public/css/style.css
+++ b/site/website/public/css/style.css
@@ -8525,7 +8525,7 @@ button.disabled:hover, a.btn_full.disabled:hover{
 
 .loader-view{
     margin: 25px 0 0 -25px;
-    position: absolute;
+    position: initial;
     left: 50%;
     top: 50%;
     width: 50px;
@@ -8636,4 +8636,34 @@ ul#top_tools li{
     padding: 20px 10px;
     border-radius: 10px;
     margin: 20px 0 30px 0
+}
+
+.tox-tinymce{
+    z-index: 0 !important
+}
+
+.strip_booking span{
+    color: #535252;
+    font-size: 12px;
+}
+
+.strip_booking .img_container{
+    border-radius: 5px !important;
+    width: 150px;
+    height: 100px;
+}
+
+.strip_booking .img_container img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.facebook-icon, .instagram-icon, .gallery-icon{
+    font-size: 14px;
+    padding: 0 2px
+}
+
+.empty-data{
+    color: #535252;
 }
