--- a/site/website/public/css/style.css
+++ b/site/website/public/css/style.css
@@ -1899,10 +1899,17 @@ ul#cat_nav i {
 }
 
 .img_list img {
-    width: auto;
+    width: 100%;
     height: 240px;
     position: absolute;
-    left: -10%
+    left: 0;
+    object-fit: cover;
+}
+
+@media (min-width: 768px) and (max-width: 1200px) {
+    .img_list img {
+        left: 0 !important;
+    }
 }
 
 .img_list a img {
@@ -7255,7 +7262,7 @@ a.box_news ul li:after {
     }
 }
 
-.custom-search-input-2 input[type='submit'] {
+.custom-search-input-2 input[type='submit'], .custom-search-input-2 button {
     -moz-transition: all .3s ease-in-out;
     -o-transition: all .3s ease-in-out;
     -webkit-transition: all .3s ease-in-out;
@@ -7279,7 +7286,7 @@ a.box_news ul li:after {
 }
 
 @media (max-width: 991px) {
-    .custom-search-input-2 input[type='submit'] {
+    .custom-search-input-2 input[type='submit'], .custom-search-input-2 button {
         margin: 20px 0 0;
         -webkit-border-radius: 3px;
         -moz-border-radius: 3px;
@@ -7288,7 +7295,7 @@ a.box_news ul li:after {
     }
 }
 
-.custom-search-input-2 input[type='submit']:hover {
+.custom-search-input-2 input[type='submit']:hover, .custom-search-input-2 button:hover {
     background-color: #008489;
     color: #fff
 }
@@ -8714,4 +8721,40 @@ ul#top_tools li{
 .rs-pagination-btn-active{
     border: 1px solid #e04f67cc !important;
     color: #e04f67cc !important;
+}
+
+.hover_load:hover{
+    cursor: progress;
+}
+
+.section_sub_title{
+    color: #717273;
+}
+
+.hotel_container .img_container{
+    width: auto !important;
+    height: 277px !important;
+}
+
+.hotel_container .img_container img{
+    width: 100% !important;
+    height: 100% !important;
+    object-fit: cover !important
+}
+
+#search_2 .css-13cymwt-control, #search_2 .css-hlgwow{
+    height: 50px !important;
+    font-size: 13px !important;
+    border: none
+}
+
+#search_2 .css-t3ipsp-control{
+    border: none !important;
+    padding: 0 !important;
+    box-shadow: none !important;
+}
+
+#search_2 .css-19bb58m{
+    padding: 0 !important;
+    margin: 0 !important;
 }
