--- a/site/website/public/css/style.css
+++ b/site/website/public/css/style.css
@@ -2334,7 +2334,7 @@ a#filters_col_bt .icon_set_1_icon-65 {
 
 #hero_2 .intro_title h1 {
     font-size: 38px;
-    margin-bottom: 15px;
+    margin: 60px 0 15px 0;
     color: #fff;
     text-transform: uppercase;
     font-weight: 700
@@ -3683,7 +3683,7 @@ ul.list_order li span {
     width: 40px;
     height: 40px;
     z-index: 2;
-    font-size: 20px;
+    font-size: 25px;
     line-height: 40px;
     text-align: center;
     cursor: pointer
@@ -3704,7 +3704,7 @@ ul.list_order li span {
     font-weight: 400;
     font-family: "icon_set_1";
     font-size: 40px;
-    content: "\72";
+    /* content: "\72"; */
     color: #888;
     position: absolute;
     left: 0;
@@ -3720,7 +3720,7 @@ ul.list_order li span {
     z-index: 2;
     font-size: 20px;
     line-height: 30px;
-    font-size: 14px;
+    font-size: 24px;
     text-align: center;
     cursor: pointer;
     color: #fff !important
@@ -3731,7 +3731,7 @@ ul.list_order li span {
     font-weight: 400;
     font-family: "icon_set_1";
     font-size: 30px;
-    content: "\72";
+    /* content: "\72"; */
     color: #fff;
     position: absolute;
     left: 0;
@@ -8789,10 +8789,248 @@ ul#top_tools li{
 }
 
 .image-gallery-content .image-gallery-slide .image-gallery-image{
-    max-height: 600px !important;
+    max-height: 350px !important;
 }
 
 .image-gallery-thumbnail .image-gallery-thumbnail-image{
     max-height: 92px !important;
     object-fit: contain !important;
+}
+
+.shop-item .image-box .image{
+    height: 306px;
+}
+
+.shop-item .image-box .image img{
+    width: 100% !important;
+    height: 100% !important;
+    object-fit: cover;
+}
+
+.shop-item .product_description h3{
+    font-size: 22px;
+    font-weight: 600;
+}
+
+.shop-item .product_description .price i{
+    color: #e04f67;
+    font-weight: bold;
+}
+
+.eventCategories .active{
+    color: #e14d67 !important
+}
+
+ul#cat_nav li {
+    transition: all 0.8s ease-in-out;
+}
+
+.cat_button_expanded{
+    font-size: 13px;
+    display: block;
+    text-align: left;
+    color: #e14d67 !important;
+}
+
+ul#geoloc_adress{
+    z-index: 9999999999999;
+    position: absolute;
+    width: 100%;
+    border-radius: 0px 0px 7px 7px;
+    max-height: 290px;
+    overflow: auto;
+}
+
+ul#geoloc_adress li:hover{
+    background-color: #fff8f2;
+    cursor: pointer;
+}
+
+.details-header{
+    background-color: #fff8f2;
+    padding: 20px 10px;
+    margin-bottom: 20px;
+}
+
+.details-header ul{
+    list-style: none;
+}
+
+.sidebar .related-products .post .event_begin{
+    color: #555;
+    font-size: 12px;
+}
+
+.sidebar .related-products .post .post-thumb{
+    height: 100px;
+}
+.sidebar .related-products .post img{
+    height: 100%;
+    object-fit: cover;
+}
+
+.space_element{
+    margin-bottom: 35px;
+}
+
+.leaflet-popup-content .popup_element{
+    width: 180px;
+    height: 242px;
+}
+
+.leaflet-popup-content .popup_img{
+    width: 100%;
+    height: 195px;
+}
+
+.leaflet-popup-content img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.leaflet-popup-content h5{
+    margin-top: 10px;
+    font-size: 13px;
+}
+
+.is_favorite{
+    color: #e04f67 !important
+}
+
+.plan_side{
+    min-height: 333px;
+    overflow: hidden;
+    border-radius: 8px;
+    border: 1px solid #e0e0e0;
+    background-color: #fff;
+    padding: 24px;
+    margin-bottom: 20px;
+}
+
+.plan_side .plan_element, .plan_side .commodite_element{
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.plan_side h3{
+    margin-top: 0px !important;
+    margin-bottom: 15px;
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.plan_side .section_avis{
+    display: flex;
+    gap: 10px;
+    align-items: baseline;
+}
+
+.plan_side .section_avis .avis{
+    font-size: 24px;
+    font-weight: 600;
+}
+
+.plan_side .section_avis .total_avis{
+    margin-left: 10px;
+    font-weight: bold;
+}
+
+.plan_side .cat{
+    font-weight: bold;
+}
+
+.plan_side .separator{
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.plan_side .separator hr{
+    border: none;
+    border-top: 1px solid #e0e0e0;
+}
+
+.plan_side .commodite_element h6{
+    font-weight: 600;
+    font-size: 12px;
+    text-transform: uppercase;
+}
+
+.plan_side .commodite_element .commodites, .plan_side .horaires{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.plan_side .commodite_element .commodites li{
+    display: inline-block;
+    padding: 0px 20px 5px 0;
+}
+
+.plan_side .map_content{
+    max-height: 130px;
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+.plan_side .plan_phone{
+    display: flex;
+    margin-top: 10px;
+}
+
+.plan_side .plan_phone a{
+    color: inherit;
+    flex: 1;
+}
+
+.plan_side .plan_phone a:hover{
+    text-decoration: underline !important;
+}
+
+.plan_side .horaires li{
+    display: flex;
+    padding: 8px;
+    border-bottom: 1px solid #e0e0e0;
+}
+.plan_side .horaires li:first-child{
+    padding-top: 0;
+}
+.plan_side .horaires li:last-child{
+    padding-bottom: 0;
+    border: none;
+}
+
+.horaires li span{
+    flex: 1;
+}
+
+.horaires .hours{
+    font-weight: bold;
+}
+
+.horaires .total{
+    font-weight: bold;
+    color: #e04f67
+}
+
+.commentaire_avis{
+    margin-top: 60px;
+    padding-top: 50px;
+    border-top: 1px solid #e0e0e0;
+}
+
+.commentaire_avis .title{
+    font-size: 22px;
+    font-weight: 600;
+    border-bottom: 2px solid #000;
+    padding-bottom: 5px;
+}
+.commentaire_avis .position{
+    margin-top: 25px;
+}
+
+.commentaire_avis .title span{
+    font-weight: initial !important;
 }
