--- a/site/website/public/css/style.css
+++ b/site/website/public/css/style.css
@@ -8788,12 +8788,36 @@ ul#top_tools li{
     font-size: 15px !important;
 }
 
+.image-gallery-slide{
+    padding: 0 3px !important
+}
+
 .image-gallery-content .image-gallery-slide .image-gallery-image{
-    max-height: 350px !important;
+    height: 350px !important;
+    border-radius: 10px;
+    width: 350px;
+    object-fit: cover;
+}
+
+.image-gallery-thumbnail.active, .image-gallery-thumbnail:focus{
+    border: 2px solid #e04f67cc !important;
+    padding: 2px;
+    border-radius: 10px
 }
 
 .image-gallery-thumbnail .image-gallery-thumbnail-image{
-    max-height: 92px !important;
+    height: 100% !important;
+    object-fit: cover !important;
+    border-radius: 10px
+}
+
+.image-gallery-thumbnail .image-gallery-thumbnail-inner{
+    height: 100px !important
+}
+
+.image-gallery-content.fullscreen .image-gallery-slide .image-gallery-image{
+    height: auto !important;
+    width: auto !important;
     object-fit: contain !important;
 }
 
@@ -8874,13 +8898,13 @@ ul#geoloc_adress li:hover{
 }
 
 .leaflet-popup-content .popup_element{
-    width: 180px;
-    height: 242px;
+    width: 110px;
+    height: 140px;
 }
 
 .leaflet-popup-content .popup_img{
-    width: 100%;
-    height: 195px;
+    width: auto;
+    height: 80px;
 }
 
 .leaflet-popup-content img{
@@ -9044,4 +9068,10 @@ ul#geoloc_adress li:hover{
 .plan_title{
     font-weight: 600;
     margin-bottom: 20px;
+}
+
+.other_event{
+    padding: 20px 30px;
+    background: #fff;
+    border-radius: 20px;
 }
